fixed overflow-x

--- a/src/main.scss
+++ b/src/main.scss
@@ -10,6 +10,6 @@
 body {
   min-height: 100vh;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
 }
